# agentic-drug-discovery-system

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PROJECT_BRIEF.md  README.md  SECURITY.md  codemeta.json  pyproject.toml  release_decision_packet.json  release_manifest.json
.github/: pull_request_template.md
adapters/: README.md  boltz_adapter.py  chembl_adapter.py  clinical_synthesis_adapter.py  ctgov_adapter.py  ema_epar_adapter.py  ema_ledger.py  execution_registry.py  molprops_adapter.py  opentargets_adapter.py  pinned_evidence_adapter.py
agentic_drug_discovery/: __init__.py  bounded_demo.py  cdc_mmwr.py  chembl_activity.py  clinical_disposition.py  clinical_endpoint_mapping.py  clinical_portfolio.py  clinical_synthesis.py  clinicaltrials_gov.py  demo.py  environment.py  execution.py  ingestion.py  ingestion_cli.py  matched_evaluation.py  models.py  ncbi_pubmed.py  orchestration.py  pinned_evidence.py  planning.py  policy.py  program.py  promotion.py  replay_cli.py  sealed_evaluation.py  serialization.py  verifiers.py
benchmark/: README.md  pyproject.toml
benchmark/src/ctdbench/: __init__.py  cli.py  data.py  evaluate.py
benchmark/tests/: test_data.py  test_smoke.py
chains/: README.md  discovery_flow.py  episode_flow.py
docs/: 00_problem_framing.md  01_long_horizon_chain_design.md  02_success_failure_case_design.md  03_deterministic_soft_verifier.md  04_rl_environment_design.md  05_model_tool_stack.md  06_episode_label_ontology_v0.md  07_self_review_checkpoints_v0.md  11_full_flow_retrospective_and_prospective_plan.md  12_scd_vertical_slice.md  13_target_id_governance_node.md  14_target_identity_continuity.md  15_discovery_context_identity.md  16_clinical_intervention_identity.md  17_pinned_source_ingestion.md  18_cdc_mmwr_ingestion.md  19_ncbi_pubmed_ingestion.md  20_preclinical_provider_ingestion.md  21_clinical_provider_ingestion.md  22_clinical_benefit_risk_synthesis.md  23_clinical_portfolio_endpoint_mapping.md  24_policy_replanning_and_resume.md  25_cutoff_safe_policy_evaluation.md  (+8 more)
(+84 files in other folders)
